# DSE-AI-TRADER

./: .env.example  .gitignore  README.md  REPORT.md  backfill_history.py  pyproject.toml  render.yaml  restart_dse_ai_trader_os.bat  start_dse_ai_trader_os.bat  stop_dse_ai_trader_os.bat
app/: config.py  db.py  logging_setup.py  main.py  models.py  schemas.py
app/collectors/: base.py  cse.py  dse.py  dse_history.py  dse_index.py  http.py  index_history.py
app/routes/: audit.py  chart.py  explain.py  intel.py  market.py  portfolio.py  quality.py  research.py  scan.py  udf.py  watchlist.py
app/services/: eod.py  intel.py  quality.py  scheduler.py  validation.py
app/templates/: admin.html  terminal.html
tests/: test_dse_parser.py  test_validation.py
