[project]
name = "dse-ai-trader-os"
version = "0.1.0"
description = "Bangladesh AI-Native Market Intelligence Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "jinja2>=3.1.4",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.3"]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
